--- a/config/manifests/bases/hyperfoil-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/hyperfoil-operator.clusterserviceversion.yaml
@@ -11,7 +11,7 @@ metadata:
             "name": "hyperfoil"
           },
           "spec": {
-            "version": "latest"
+            "version": "0.24.2"
           }
         }
       ]
